--- a/src/views/partials/profile_all_users.hbs
+++ b/src/views/partials/profile_all_users.hbs
@@ -17,11 +17,15 @@
                     </div>
                     <div class="n-actions">
                         <a href="/admin/users/editpanel/{{_id}}">
-                            <div class="edit"><i class="fas fa-edit"></i></div>
+                            <div class="edit">
+                                <div class="icon-container"><img src="/icons/edit.png" alt=""></div>
+                            </div>
                         </a>
                         <div class="n-actions">
                             <a href="/admin/users/deletepanel/{{_id}}">
-                                <div class="trash"><i class="fas fa-trash-alt"></i></div>
+                                <div class="trash">
+                                    <div class="icon-container"><img src="/icons/trash.png" alt=""></div>
+                                </div>
                             </a>
                         </div>
                     </div>
