--- a/src/views/partials/profile_all_columns.hbs
+++ b/src/views/partials/profile_all_columns.hbs
@@ -15,81 +15,21 @@
                     </div>
                     <div class="n-actions">
                         <a href="/columns/edit/{{_id}}">
-                            <div class="edit"><i class="fas fa-edit"></i></div>
+                            <div class="edit">
+                                <div class="icon-container"><img src="/icons/edit.png" alt=""></div>
+                            </div>
                         </a>
                         <form action="/columns/delete/{{_id}}?_method=DELETE" method="POST">
                             <input type="hidden" name="_method" value="DELETE">
                             <button>
-                                <div class="trash"><i class="fas fa-trash-alt"></i></div>
+                                <div class="trash">
+                                    <div class="icon-container"><img src="/icons/trash.png" alt=""></div>
+                                </div>
                             </button>
                         </form>
                     </div>
                 </div>
                 {{/each}}
-
-                <!--
-
-                <div class="list-card">
-                    <div class="n-img-container">
-                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ra1RlD3p1pY"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                    <div class="n-info">
-                        <h3 class="n-title">Cojer borracho y con medias: ¿Hemos descubierto la sabiduría?</h3>
-
-                        <span class="aN-date">En esta emisión: Josefina Gutierrez, Pablo Manteca, Jorge Esteban, Pepe
-                            Muleiro</span>
-                        <span class="aN-date">20/16/2019</span>
-                    </div>
-                    <div class="n-actions">
-                        <div class="edit"><i class="fas fa-edit"></i></div>
-                        <div class="trash"><i class="fas fa-trash-alt"></i></div>
-                    </div>
-                </div>
-
-                <div class="list-card">
-                    <div class="n-img-container">
-                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ra1RlD3p1pY"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                    <div class="n-info">
-                        <h3 class="n-title">La noticia del siglo: "Todos vamos a morir por un ataque al hígado"</h3>
-
-                        <span class="aN-date">En esta emisión: Josefina Gutierrez, Miguel Hernandez, Miguelito Alfaro,
-                            Shakira, Mora Lola</span>
-                        <span class="aN-date">20/16/2019</span>
-                    </div>
-                    <div class="n-actions">
-                        <div class="edit"><i class="fas fa-edit"></i></div>
-                        <div class="trash"><i class="fas fa-trash-alt"></i></div>
-                    </div>
-                </div>
-
-                <div class="list-card">
-                    <div class="n-img-container">
-                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ra1RlD3p1pY"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                    <div class="n-info">
-                        <h3 class="n-title">A veces creo que lo mejor sería echarse una siestita en el pasto.</h3>
-
-                        <span class="aN-date">En esta emisión: Josefina Gutierrez, Arturo Marcial, Elon Musk, Linux
-                            Gonzales, Arch Mgiguel, Zaratustra, Nietzche Jimenez, Lorena Corrales</span>
-                        <span class="aN-date">20/16/2019</span>
-                    </div>
-                    <div class="n-actions">
-                        <div class="edit"><i class="fas fa-edit"></i></div>
-                        <div class="trash"><i class="fas fa-trash-alt"></i></div>
-                    </div>
-                </div>
-                -->
-
 
             </div>
         </div>
