--- a/src/views/partials/profile_sidebar.hbs
+++ b/src/views/partials/profile_sidebar.hbs
@@ -4,51 +4,69 @@
         </div>
         <ul class="sidebar-menu">
                 {{#if user.admin}}
-                <li class="menu-option"> <i class="fas fa-users"></i><a href="/admin/allusers"
+                <li class="menu-option">
+                        <div class="icon-container"><img src="/icons/users.png" alt=""></div><a href="/admin/allusers"
                                 class="bright menu-link">Todos los
-                                Usuarios</a></li>
+                                Usuarios</a>
+                </li>
                 {{/if}}
-                <li class="menu-option"> <i class="fas fa-user"></i> <a href="/admin/profile"
+                <li class="menu-option">
+                        <div class="icon-container"><img src="/icons/users.png" alt=""></div> <a href="/admin/profile"
                                 class="bright menu-link">Perfil
                                 de
-                                usuario</a> </li>
+                                usuario</a>
+                </li>
                 <li class="nested menu-option"> <a href="/admin/changeinfo" class="menu-link">Datos</a></li>
                 <li class="nested menu-option"> <a href="/admin/changepass" class="menu-link">Contaseña</a></li>
                 <li class="nested menu-option"> <a href="/admin/changesocial" class="menu-link">Redes</a></li>
                 <li class="nested menu-option"> <a href="/admin/changephoto" class="menu-link">Foto</a></li>
                 {{#if user.admin}}
-                <li class="menu-option"><i class="far fa-newspaper"></i> <a href="/admin/allnews"
+                <li class="menu-option">
+                        <div class="icon-container"><img src="/icons/allnews.png" alt=""></div><a href="/admin/allnews"
                                 class="bright menu-link">Todas las
-                                Noticias</a></li>
+                                Noticias</a>
+                </li>
                 {{/if}}
-                <li class="menu-option"><i class="fas fa-newspaper"></i> <a href="/admin/usernews"
+                <li class="menu-option">
+                        <div class="icon-container"><img src="/icons/edit2.png" alt=""></div><a href="/admin/usernews"
                                 class="bright menu-link">Noticias
-                                Publicadas</a></li>
+                                Publicadas</a>
+                </li>
                 <li class="nested menu-option"> <a href="/admin/addnew" class="menu-link">Nueva Noticia</a></li>
                 {{#if user.admin}}
-                <li class="menu-option"> <i class="fas fa-broadcast-tower"></i> <a href="/admin/allcolumns"
-                                class="bright menu-link">Columnas</a></li>
+                <li class="menu-option">
+                        <div class="icon-container"><img src="/icons/columns.png" alt=""></div> <a
+                                href="/admin/allcolumns" class="bright menu-link">Columnas</a>
+                </li>
                 <li class="nested menu-option"> <a href="/admin/addcolumn" class="menu-link">Nueva Columna</a></li>
-                <li class="menu-option"> <i class="fab fa-youtube"></i> <a href="/admin/emitions"
-                                class="bright menu-link">Emisiones</a>
+                <li class="menu-option">
+                        <div class="icon-container"><img src="/icons/emitions.png" alt=""></div> <a
+                                href="/admin/emitions" class="bright menu-link">Emisiones</a>
                 </li>
                 <li class="nested menu-option"> <a href="addemition" class="menu-link">Nueva Emision</a></li>
-                <li class="menu-option"> <i class="fas fa-microphone-alt"></i> <a href="/admin/iframes"
+                <li class="menu-option">
+                        <div class="icon-container"><img src="/icons/music.png" alt=""></div> <a href="/admin/iframes"
                                 class="bright menu-link">Iframe de
-                                Podcast</a></li>
+                                Podcast</a>
+                </li>
                 {{/if}}
 
                 {{#if user.editor}}
-                <li class="menu-option"> <i class="fas fa-broadcast-tower"></i> <a href="/admin/allcolumns"
-                                class="bright menu-link">Columnas</a></li>
+                <li class="menu-option">
+                        <div class="icon-container"><img src="/icons/columns.png" alt=""></div> <a
+                                href="/admin/allcolumns" class="bright menu-link">Columnas</a>
+                </li>
                 <li class="nested menu-option"> <a href="/admin/addcolumn" class="menu-link">Nueva Columna</a></li>
-                <li class="menu-option"> <i class="fab fa-youtube"></i> <a href="/admin/emitions"
+                <li class="menu-option">
+                        <div class="icon-container"><img src="/icons/emitions" alt=""></div> <a href="/admin/emitions"
                                 class="bright menu-link">Emisiones</a>
                 </li>
                 <li class="nested menu-option"> <a href="addemition" class="menu-link">Nueva Emision</a></li>
-                <li class="menu-option"> <i class="fas fa-microphone-alt"></i> <a href="/admin/iframes"
+                <li class="menu-option">
+                        <div class="icon-container"><img src="/icons/music.png" alt=""></div> <a href="/admin/iframes"
                                 class="bright menu-link">Iframe de
-                                Podcast</a></li>
+                                Podcast</a>
+                </li>
                 {{/if}}
 
 
