--- a/src/views/partials/profile_home.hbs
+++ b/src/views/partials/profile_home.hbs
@@ -67,7 +67,7 @@
                 </li>
         </div>
         <div class="wellcome-news">
-            <h2>Publicaciones</h2>
+            <h2>Tus últimas noticas</h2>
             <div class="news-list">
                 {{#each user_news}}
                 <div class="list-card">
