--- a/src/views/partials/profile_nav.hbs
+++ b/src/views/partials/profile_nav.hbs
@@ -64,4 +64,15 @@
     .edit:hover img {
         filter: opacity(0.6)
     }
+
+    #gimmi {
+        width: 100%;
+        border: none;
+        background-color: crimson;
+        color: white;
+        font-size: 150%;
+        font-weight: bold;
+        cursor: pointer;
+        height: 4rem;
+    }
 </style>
