Moved many styles  and scripts  from .hbs to its own files
+ Created "css" and "js" folders in /public/
+ Changed controlls in order to use the new paths in altFormat.altCSS and altScripts objects that sets the scripts in the renderization of the html
+ Moved others .css and .js files from public to the new folders

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -35,8 +35,8 @@
     {{{this}}}
     {{/each}}
     {{else}}
-    <link rel="stylesheet" href="/home-grid.css">
-    <link rel="stylesheet" href="/home-styles.css">
+    <link rel="stylesheet" href="/css/home-grid.css">
+    <link rel="stylesheet" href="/css/home-styles.css">
     {{/if}}
 
 
