--- a/src/public/css/all_news.css
+++ b/src/public/css/all_news.css
@@ -206,38 +206,34 @@ a {
     height: 100%;
     background-color: rgba(255, 251, 251, 0.08);
     margin: 0 auto;
-
-   
-
 }
 
-.article .img-container{
+.article .img-container {
     max-width: 100%;
     width: 100%;
     height: auto;
-
 }
 
-.article .img-container img{
+.article .img-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.info{
+.info {
     padding: 4%;
-  
-}   
+}
 
-.info .article-title{
+.info .article-title {
     color: white;
     font-size: 120%;
     margin-bottom: 2%;
-
+    margin-top: 0.2rem;
 }
 
-.info .date{
+.info .date {
     color: crimson;
+    font-size: 70%;
 }
 
 .footer {
