--- a/src/views/all_news.hbs
+++ b/src/views/all_news.hbs
@@ -183,572 +183,5 @@
         </a>
     </div>
 </footer>
-<script>
-    var i = 6;
-    document.getElementById("gimmi").addEventListener("click", () => {
-        fetch(`/all/news?page=${i}`)
-            .then((response) => {
-                return response.json();
-            })
-            .then(res => {
-                res.news.forEach(e => {
-                    let article = document.createElement('div');
-                    article.classList.add('article');
-                    let img_container = document.createElement('div');
-                    img_container.classList.add('img-container');
-                    let link = document.createElement('a');
-                    link.href = `/contents/news/${e.url}`;
-                    let image = document.createElement('img');
-                    image.src = e.thumbnail;
-                    let info = document.createElement('div');
-                    info.classList.add('info');
-                    let link2 = document.createElement('a');
-                    link2.href = `contents/news/${e.url}`;
-                    let title = document.createElement('h2');
-                    title.classList.add('article-title');
-                    title.appendChild(document.createTextNode(e.title));
-                    let date = document.createElement('span');
-                    date.classList.add('date');
-                    date.appendChild(document.createTextNode(e.date));
-                    link2.appendChild(title);
-                    let container = document.createElement('div');
-                    container.appendChild(date);
-                    container.appendChild(link2);
-                    info.appendChild(container);
-                    let author = document.createElement('div');
-                    author.classList.add('author');
-                    let author_container = document.createElement('div');
-                    author_container.classList.add('author_container');
-                    let author_img = document.createElement('img');
-                    author_img.src = e.author_thumbnail;
-                    author_container.appendChild(author_img);
-                    author.appendChild(author_container);
-                    let author_name = document.createElement('span');
-                    author_name.appendChild(document.createTextNode('Por '));
-                    let StrongestNameInTheHistory = document.createElement('strong');
-                    StrongestNameInTheHistory.appendChild(document.createTextNode(e.author));
-                    author_name.appendChild(StrongestNameInTheHistory);
-                    author.appendChild(author_name);
-                    info.appendChild(author);
-                    link.appendChild(image);
-                    img_container.appendChild(link);
-                    article.appendChild(img_container);
-                    article.appendChild(info);
-                    let grid = document.getElementById("grid-container");
-                    grid.appendChild(article);
-                })
-
-            }
-            ).catch((err) => {
-                let par = document.createElement('h3');
-                par.appendChild(document.createTextNode("Me parece que no tenemos más tenemos más noticias. Te recomendamos recorrer el resto de la página, visitar nuestras redes o sumarte en alguna de nuestras épicas fiestas."));
-                let grid = document.getElementById("grid-container");
-                par.classList.add('font-crimson');
-                grid.appendChild(par);
-            });
-        i = i + 3;
-        console.log(i)
-    });
-</script>
-<script>
-
-    document.getElementById("menu-button").addEventListener("click", () => {
-        if (document.getElementById("main-nav-menu").classList.contains("menu-out")) {
-            document.getElementById("main-nav-menu").classList.remove("menu-out");
-        };
-        if (!document.getElementById("main-nav-menu").classList.contains("menu-in")) {
-            document.getElementById("main-nav-menu").classList.add("menu-in");
-        }
-    });
-    document.getElementById("close-button").addEventListener("click", () => {
-        if (document.getElementById("main-nav-menu").classList.contains("menu-in")) {
-            document.getElementById("main-nav-menu").classList.remove("menu-in");
-        }
-        if (!document.getElementById("main-nav-menu").classList.contains("menu-out")) {
-            document.getElementById("main-nav-menu").classList.add("menu-out");
-        }
-    });
-
-</script>
-<style>
-    body {
-        overflow-x: hidden;
-        background-color: rgb(0, 0, 0);
-        font-family: 'Open Sans', sans-serif;
-    }
-
-    a {
-        text-decoration: none;
-    }
-
-    /* FONTS */
-
-    .small-header {
-        display: none;
-    }
-
-    .font-white,
-    .body p {
-        color: white;
-        transition: color 0s ease-in-out;
-    }
-
-    .font-crimson {
-        color: crimson;
-        transition: all 0.6s ease-in-out;
-    }
-
-    .font-italic {
-        font-style: italic;
-    }
-
-    .custom-big-title {
-        display: block;
-        font-size: 200%;
-        margin: 3% 0;
-    }
-
-    .custom-medium-title {
-        display: block;
-        font-size: 170%;
-        font-weight: 400;
-        margin: 2% 0;
-    }
-
-    /* width */
-
-    ::-webkit-scrollbar {
-        width: 6px;
-    }
-
-    /* Track */
-
-    ::-webkit-scrollbar-track {
-        background: #040A0E;
-    }
-
-    /* Handle */
-
-    ::-webkit-scrollbar-thumb {
-        background: rgba(24, 104, 158, 0.788);
-        transition: all 0.5s ease-in-out;
-    }
-
-    /* Handle on hover */
-
-    ::-webkit-scrollbar-thumb:hover {
-        background: rgb(0, 153, 255);
-    }
-
-    * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        scrollbar-color: rgb(0, 153, 255) rgb(0, 0, 0);
-        scrollbar-width: thin;
-    }
-
-    .main-nav {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 10vh;
-        z-index: 99;
-        background-color: rgba(0, 0, 0, 0.954);
-    }
-
-    .menu-button,
-    .main-nav-menu {
-        display: none;
-    }
-
-    .main-nav .logo-container {
-        position: absolute;
-        width: 12%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .main-nav .nav-logo {
-        width: auto;
-        height: 65%;
-    }
-
-    .main-nav .button-listen-now {
-        position: relative;
-        margin-left: 26%;
-        top: 10%;
-        bottom: auto;
-        width: 19%;
-        height: 80%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: 'Anton', sans-serif;
-        font-size: 180%;
-        border: 2px solid crimson;
-        overflow: hidden;
-        transition: color 0.3s ease-in-out;
-    }
-
-    .main-nav .button-listen-now:hover {
-        color: white;
-        cursor: pointer
-    }
-
-    .main-nav .button-listen-now:before {
-        content: " ";
-        position: absolute;
-        width: 600px;
-        height: 300px;
-        top: 100px;
-        left: 100px;
-        border-radius: 50%;
-        background-color: crimson;
-        z-index: -1;
-        transition: all 0.8s ease-out;
-    }
-
-    .main-nav .button-listen-now:hover:before {
-        transform: translate(-40%, -70%);
-    }
-
-    .main-nav .nav-list {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 45%;
-        height: 10vh;
-        display: flex;
-        flex-flow: row;
-        justify-content: space-evenly;
-        align-items: center;
-        list-style: none;
-    }
-
-    .main-nav .nav-link {
-        display: inline-block;
-        text-decoration: none;
-        font-weight: bold;
-        transition: color 0.2s ease-in-out;
-        transition: transform 0.1s ease-in-out;
-    }
-
-    .main-nav .nav-link:focus,
-    .main-nav .nav-link:hover {
-        color: white;
-    }
-
-    .main-nav .nav-link:active {
-        transform: translateY(2px);
-    }
-
-    .contents {
-        width: 90%;
-        height: auto;
-        margin: 0 auto;
-    }
-
-    .section-title {
-        position: relative;
-        height: auto;
-        width: auto;
-        z-index: 2;
-        margin: 15vh auto 0 auto;
-        font-family: 'Anton', sans-serif;
-        font-size: 300%;
-        letter-spacing: 0.3rem;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.63);
-    }
-
-    .grid-container {
-        margin-top: 4vh;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 350px));
-        grid-auto-rows: auto;
-        grid-gap: 5vh;
-        justify-content: space-evenly;
-        width: 100%;
-    }
-
-    .article {
-        display: block;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(255, 251, 251, 0.08);
-        margin: 0 auto;
-
-
-
-    }
-
-    .article .img-container {
-        max-width: 100%;
-        width: 100%;
-        height: auto;
-
-    }
-
-    .article .img-container img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-
-    .info {
-        padding: 4%;
-
-    }
-
-    .info .article-title {
-        color: white;
-        font-size: 120%;
-        margin-bottom: 2%;
-        margin-top: 0.2rem;
-
-    }
-
-    .info .date {
-        color: crimson;
-        font-size: 70%;
-    }
-
-    .footer {
-        position: relative;
-        height: auto;
-        width: 100%;
-        margin: 0 auto;
-        display: flex;
-        flex-flow: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-    }
-
-    .footer .item {
-        width: 25%;
-    }
-
-    .footer-socials {
-        width: 100%;
-    }
-
-    .footer {
-        background-color: rgb(57, 57, 57, 0.51);
-        padding-top: 1%;
-        margin-top: 10vh;
-        bottom: 0;
-    }
-
-    .footer h3 {
-        margin: 2% 0;
-    }
-
-    .socials-footer {
-        margin-top: 0.5%;
-        width: 100%;
-        height: 12vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-right: 2%;
-    }
-
-    .socials-footer .img-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 7vh;
-        width: 7vh;
-        margin-right: 2%;
-        border-radius: 50% 50%;
-        background-color: crimson;
-    }
-
-    .socials-footer .img-container img {
-        height: 5vh;
-        width: auto;
-    }
-
-    @media only screen and (max-width: 1050px) {
-        .main-nav .button-listen-now {
-            font-size: 150%
-        }
-    }
-
-    @media only screen and (max-width: 950px) {
-        .section-title {
-            text-align: center;
-        }
-
-        .small-header {
-            background-image: url(/small-header.JPG);
-            background-repeat: no-repeat;
-            background-size: cover;
-            width: 100%;
-            height: 15vh;
-            z-index: 99;
-            position: relative;
-            align-items: center;
-            display: flex;
-        }
-
-        .small-header .img-container {
-            margin-left: 2%;
-            padding-right: 15%;
-            width: auto;
-            height: 80%;
-            max-width: 20vh;
-            max-height: 15vh;
-        }
-
-        .small-header .img-container img {
-            object-fit: cover;
-            max-height: 100%;
-            width: auto;
-        }
-
-        .main-nav {
-            display: none
-        }
-
-        .menu-button {
-            position: fixed;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transform: rotate(90deg);
-            height: 10vh;
-            width: 10vh;
-            bottom: 2vh;
-            right: 2vh;
-            z-index: 99;
-            background-color: crimson;
-            cursor: pointer
-        }
-
-        .menu-button span {
-            font-weight: bolder;
-        }
-
-        .main-nav-menu {
-            position: fixed;
-            display: flex;
-            flex-flow: column;
-            height: 100%;
-            width: 100%;
-            left: 0;
-            top: 0;
-            background-color: rgba(0, 0, 0, 0.945);
-            z-index: 100;
-            padding-left: 5%;
-            transition: all 0.2s ease-in-out;
-        }
-
-        .menu-in {
-            transform: translateX(0);
-        }
-
-        .menu-out {
-            transform: translateX(-100%);
-        }
-
-        .main-nav-menu .close-button {
-            position: absolute;
-            top: 2vh;
-            right: 2vh;
-            width: 7vh;
-            height: 7vh;
-            background-color: crimson;
-            transform: rotate(45deg);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 210%;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-
-        .main-nav-menu h2 {
-            margin-top: 5vh;
-            margin-bottom: 3vh;
-            font-size: 400%;
-            font-weight: bold;
-        }
-
-        .main-nav-menu .nav-list {
-            height: 50%;
-            margin-left: 1%;
-            display: flex;
-            flex-flow: column;
-            justify-content: space-between;
-        }
-
-        .main-nav-menu .nav-link {
-            font-size: 180%;
-        }
-
-        .main-nav-menu .socials-footer {
-            justify-content: space-evenly;
-            max-width: 100%;
-            margin: auto;
-        }
-    }
-
-    @media screen and (max-width: 700px) {
-        .footer {
-            position: relative;
-            height: auto;
-            width: 100%;
-            margin: 7vh auto 0 auto;
-            display: flex;
-            flex-flow: column;
-            flex-wrap: unset;
-        }
-
-        .footer .item {
-            width: 90%;
-            margin: 2vh auto 4vh auto;
-        }
-
-        .socials-footer {
-            margin-top: 0.5%;
-            width: 100%;
-            height: 12vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding-right: 2%;
-        }
-
-        .socials-footer .img-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 7vh;
-            width: 7vh;
-            margin-right: 2%;
-            border-radius: 50% 50%;
-            background-color: crimson;
-        }
-
-        .socials-footer .img-container img {
-            height: 5vh;
-            width: auto;
-        }
-    }
-
-    @media screen and (max-width: 520px) {
-        .small-header {
-            background-position-x: 30%;
-        }
-
-        .article-title {
-            font-size: 165%;
-        }
-    }
-</style>
+<script src="/js/all_news.js"></script>
+<link rel="stylesheet" href="/css/all_news.css">
