--- a/src/views/partials/error_div_style.hbs
+++ b/src/views/partials/error_div_style.hbs
@@ -1,19 +1,20 @@
 <style>
     .error_div {
         z-index: 99999;
-        position: fixed;
+        position: relative;
         margin: 2px;
         height: auto;
         padding: 3vh;
-        background-color: rgba(255, 41, 41, 0.897);
+        background-color: rgba(255, 59, 59, 0.897);
         color: rgb(255, 255, 255);
         width: auto;
         font-weight: bold;
         font-size: large;
         cursor: pointer;
     }
-    .error_div:hover{
+
+    .error_div:hover {
         background-color: red;
-        border:2px solid black;
+        border: 2px solid black;
     }
 </style>
