--- a/src/views/partials/profile_edit_new.hbs
+++ b/src/views/partials/profile_edit_new.hbs
@@ -68,7 +68,7 @@
                 <div id="img-preview-container" class="img-preview-container">
                 </div>
             </div>
-            <button id='sendEditorData' class=" B-B-submit-block">EDITAR nOTICIA</button>
+            <button id='sendEditorData' class=" B-B-submit-block">EDITAR NOTICIA</button>
         </div>
     </div>
 </div>
