--- a/src/views/all_news.hbs
+++ b/src/views/all_news.hbs
@@ -1,187 +1,32 @@
-<nav class="main-nav">
-    <a href="/" class="logo-container"> <img src="/LogoBlanco.png" class="nav-logo" alt="">
-    </a>
-    <div class="button-listen-now font-crimson"><span>ESCUCHAR AHORA!</span></div>
-    <ul class="nav-list">
-        <li><a href="/news" class="nav-link font-crimson">NOTICIAS</a></li>
-        <li><a href="/columns" class="nav-link font-crimson">RECORTES</a></li>
-        <li><a href="/emitions" class="nav-link font-crimson">EMISIONES</a></li>
-        <li><a href="/contact" class="nav-link font-crimson">CONTACTO</a></li>
-    </ul>
+{{>home_contents_header}}
 
-</nav>
-<nav id="main-nav-menu" class="main-nav-menu menu-out">
-    <div id="close-button" class="close-button"><span>+</span></div>
-    <h2 class="font-crimson">MENU</h2>
-    <ul class="nav-list">
-        <li><a href="/news" class="nav-link font-crimson">NOTICIAS</a></li>
-        <li><a href="/columns" class="nav-link font-crimson">RECORTES</a></li>
-        <li><a href="/emitions" class="nav-link font-crimson">EMISIONES</a></li>
-        <li><a href="/contact" class="nav-link font-crimson">CONTACTO</a></li>
-    </ul>
-    <div class="socials-footer">
-        <a href="" class="img-container">
-            <img src="/Youtube.svg" alt="youtube">
-        </a>
-        <a href="" class="img-container">
-            <img src="/facebook.svg" alt="facebook">
-        </a>
-        <a href="" class="img-container">
-            <img src="/Twitter.svg" alt="twitter">
-        </a>
-        <a href="" class="img-container">
-            <img src="/Instagram.svg" alt="instagram">
-        </a>
-    </div>
-</nav>
-
-<div id="menu-button" class="menu-button"><span>|||</span></div>
-<section class="contents">
-    <h1 class="section-title font-crimson">Todas las Noticias</h1>
-    <div id="grid-container" class="grid-container">
-        {{#each news}}
-        <div class="article">
-            <div class="img-container"><a href="/contents/news/{{url}}"><img src="{{thumbnail}}"></a></div>
-            <div class="info">
-                <div class="container">
-                    <span class="date">{{date}}</span>
-
-                    <a href="/contents/news/{{url}}">
-
-                        <h2 class="article-title">{{title}}</h2>
-                    </a>
-                </div>
-
-                <div class="author">
-                    <div class="author_container"><img src="{{author_thumbnail}}" alt=""></div>
-                    <span>Por <strong>{{author}}</strong></span>
-                </div>
-
+<div class="main-container">
+    <section class="news">
+        <h3 class="section-title_full ">Todas las Noticias</h3>
+        <div id="container" class="container">
+            {{#each news}}
+            <div class="article-big">
+                <a class="cover" href="/contents/news/{{url}}">
+                    <div class="img-container"><img src="{{thumbnail}}" alt="" class="cover"></div>
+                    <div class="info">
+                        <span class="headline">{{headline}}</span>
+                        <h4 class="title">{{title}}</h4>
+                        <span class="author">Por: <strong class="font-crimson">{{author}}</strong></span>
+                        <span class="date">{{date}}</span>
+                    </div>
+                </a>
             </div>
+            {{/each}}
         </div>
-        {{/each}}
-    </div>
-    <style>
-        .button-container {
-            height: auto;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
 
-        button {
-            cursor: pointer;
-            border: none;
-            background: crimson;
-            color: white;
-            width: 40vw;
-            min-width: 300px;
-            min-height: 50px;
-            height: 10vh;
-            font-weight: bold;
-            font-size: 150%;
-            margin: 5% auto;
-            position: relative;
-            transition: all 0.3s ease-in-out;
-        }
+    </section>
+</div>
 
-        button:hover {
-            background-color: rgb(220, 20, 80);
-            border: 1px solid rgba(46, 184, 218, 0.63);
-        }
-
-        button:focus {
-            outline: none;
-
-        }
-
-
-        strong {
-            font-weight: bold;
-        }
-
-        .info {
-            object-fit: cover;
-            display: flex;
-            flex-flow: column;
-            justify-content: space-between;
-            position: relative;
-            min-height: 37%;
-        }
-
-        .author {
-            font-size: 80%;
-            color: white;
-            display: flex;
-            flex-flow: row;
-            justify-content: ;
-            align-items: center;
-        }
-
-        .author_container {
-            height: 2rem;
-            width: 2rem;
-            margin-right: 0.5rem;
-
-        }
-
-        .author img {
-            border-radius: 100%;
-            height: 2rem;
-            width: 2rem;
-            max-height: 100%;
-            max-width: 100%;
-            object-fit: cover;
-        }
-    </style>
-</section>
 <div class="button-container">
     <button id="gimmi">MÁS NOTICIAS!</button>
 </div>
 
-<footer class="footer">
-    <div class="item">
-        <a href="#">
-            <h3 class="custom-medium-title font-crimson">¿Quienes somos?</h3>
-        </a>
-        <p class="font-white">Radio Entre-Piernas es un medo alternativo centrado en la comunicación desdelas
-            disidencias, que se
-            desprende del proyecto original "Entre Piernas Noches De Club"</p>
-    </div>
-    <div class="item">
-        <a href="#">
-            <h3 class="custom-medium-title font-crimson">¿Querés Colaborar?</h3>
-        </a>
-        <p class="font-white">Si querés enterarte de más, entrá en el laberinto y buscanos en nuestras redes.
-        </p>
-        <p class="font-white">Si querés participar de la redacción o proponer un programa para nuestra radio, no
-            dudes en enviar un
-            email a <strong class="font-crimson">radioentrepiernas@gmail.com</strong></p>
-    </div>
-    <div class="item">
-        <a href="#">
-            <h3 class="custom-medium-title font-crimson">Copyright</h3>
-        </a>
-        <p class="font-white">Ninguna de las noticias publicadas tiene copyright o derechos de autor. Todo lo
-            publicado está liberado
-            para ser reproducido o compar tido, sólo sugerimos compar tir la fuente y así
-            contribuir con el proyecto</p>
-    </div>
+{{>home_main_footer}}
 
-    <div class="socials-footer">
-        <a href="" class="img-container">
-            <img src="/Youtube.svg" alt="youtube">
-        </a>
-        <a href="" class="img-container">
-            <img src="/facebook.svg" alt="facebook">
-        </a>
-        <a href="" class="img-container">
-            <img src="/Twitter.svg" alt="twitter">
-        </a>
-        <a href="" class="img-container">
-            <img src="/Instagram.svg" alt="instagram">
-        </a>
-    </div>
-</footer>
 <script src="/js/all_news.js"></script>
-<link rel="stylesheet" href="/css/all_news.css">
+<link rel="stylesheet" href="/css/home.css">
